--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -23,3 +23,24 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0px;
+
+}
+
+.logo {
+  margin: 8px;
+}
+
+a {
+  margin: 8px;
+}
