--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,23 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header {
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+
+.right-items, .left-items {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+ul {
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 16px;
+}
